# fvdbnn

./: README.md  pyproject.toml  requirements.txt
fvdbnn/: __init__.py
fvdbnn/blocks/: __init__.py  conv3d.py  transformer.py
fvdbnn/functional/: __init__.py  attn.py
fvdbnn/layers/: __init__.py  attn.py  ffn.py
fvdbnn/modules/: __init__.py  activation.py  conv3d.py  dropout.py  linear.py  normalize.py  pooling.py  spatial2ch.py  utils.py  vdbtensor.py
fvdbnn/posenc/: __init__.py  ape.py  rope.py  time.py
fvdbnn/utils/: __init__.py  utils.py
tests/: __init__.py
tests/unit/: __init__.py  test_fvdbtensor.py  test_modules.py  test_modules_spatial2ch.py  test_posenc_ape.py  test_posenc_rope.py  test_posenc_time.py
